swagger update + get user route
